--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "MODE=prod node app.js",
-    "dev": "MODE=dev nodemon app.js",
+    "dev": "MODE=dev node app.js",
     "swagger": "MODE=test nodemon app.js",
     "mocha": "MODE=test nodemon --exec 'mocha ./test-unitaires/Mocha/'",
     "chai": "MODE=test nodemon --exec 'mocha ./test-unitaires/Chai/'"
@@ -25,6 +25,7 @@
     "chai-http": "^4.3.0",
     "ckeditor5": "^34.2.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
@@ -33,15 +34,15 @@
     "express-router": "^0.0.1",
     "express-session": "^1.17.3",
     "flash": "^1.1.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mocha": "^10.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3",
+    "mysql2": "^3.2.3",
     "nodejs-nodemailer-outlook": "^1.2.4",
     "nodemailer": "^6.7.7",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.22",
     "nvm": "^0.0.4",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
@@ -50,7 +51,7 @@
     "pm2": "^5.2.2",
     "sass": "^1.56.0",
     "should": "^13.2.3",
-    "startbootstrap-sb-admin-2": "^4.1.4",
+    "startbootstrap-sb-admin-2": "^3.3.7",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
     "yarn": "^1.22.19"
