Passage de bootstrap a tailwind + changement architecture

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT_NODE=3000
 NODE_ENV=developement
 DB_DATABASE=OnlineCourses
 DB_HOST=localhost
-DB_PASSWORD=Br26an07don1997//
+DB_PASSWORD=Br26@n07don1997
 DB_USER=root
