--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
   }
 }
